--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.4",
     "framer-motion": "^12.12.1",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
